# mthesis-datasets

./: .gitignore  README.md  align_images_bite.py  cli.py  compare_coordinates.py  convert_dicomseg_to_nii.py  data_export.py  de_identify_nick_lung_us.py  de_identify_nick_pocus.py  decompress_seg.py  deidentify_dcm_start.py  deidentify_mp4_start.py  file_names.py  find_transformation.py  hierarchy.txt  imgui.ini  inspect_cropping_start.py  lung_us.py  main.py  mnc2nii.py  mrb_hierarchy_extractor.py  old.py  pickle_landmarks.py  pyminc_example.py  requirements.txt  simple.py  tag2fcsv.py  temp.py  test.py  test.txt  utils.py  visualise.py
AmigoDataset/: CMakeLists.txt
AmigoStatistics/: CMakeLists.txt
AmigoStatistics/AmigoStatistics/: AmigoStatistics.py  CMakeLists.txt  extract_mrn_paths.py  save_to_xlsx.py
AmigoStatistics/AmigoStatistics/Logic/: dicom_export_logic.py  dicom_logic.py  test_import.py  tree.py  utils.py
AmigoStatistics/AmigoStatistics/Resources/: xlsx_exporting_logic.py
AmigoStatistics/AmigoStatistics/Resources/Logic/: json_dict_logic.py  xlsx_exporting_logic.py
AmigoStatistics/AmigoStatistics/Resources/UI/: AmigoStatistics.ui
AmigoStatistics/AmigoStatistics/scripts/: save_to_xlsx.py
CreateSegmentation/: CMakeLists.txt
DicomExport/: CMakeLists.txt
MRUSLandmarking/: MRUSLandmarking.py
NiftiExport/: CMakeLists.txt
deidentify_dcm/: export_logic.py  gui_logic.py  main_func.py  temp.py  utils_deidentify.py
deidentify_mp4/: __main__.py  export_logic.py  functions.py  gui_logic.py  main_func.py
inspect_cropping/: gui_logic.py  logic.py  (+4 more)
(+40 files in other folders)
